# hunter-craftsman

./: .gitignore  README.md  conftest.py  pytest.ini  setup_google_play.bat  start-all.ps1  stop-all.ps1  一键启动.bat
craftsman/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
craftsman/context/: hig-swiftui-lite.md
craftsman/craftsman/: __init__.py  callback.py  cli.py  config.py  dashboard.html  dashboard.py  feedback.py  gate.py  llm.py  models.py  prompts.py  requirement_normalize.py  schema_validate.py  secrets.py  worker.py
craftsman/examples/: agent_a_client.py  requirement.sample.json
craftsman/prompts/: craftsman_android_codegen_system.md  craftsman_codegen_system.md  craftsman_gate_system.md
craftsman/schemas/: craftsman-feedback.v1.json  release-handoff.v1.json  requirement.v1.json
craftsman/scripts/: bootstrap_gradle_wrapper.py  serve_dashboard.py  start.ps1
craftsman/tests/: conftest.py  test_alerts.py  test_android_smoke.py  test_api.py  test_audit_store.py  test_backend_pool.py  test_backends_docker_selection.py  test_callback.py  test_demo_artifacts.py  test_deploy_assets.py  test_docker_android_runner.py  test_e2e_publish.py  test_failure_taxonomy.py  test_feedback.py  test_gate.py  test_gate_evidence.py  test_gate_hours.py  test_gradle_errors.py  test_llm_routing.py  test_normalize.py  test_package_pool_assignment.py  test_play_console_sheet.py  test_play_store_live.py  test_policy_checks.py  test_preflight_script.py  test_privacy_policy_deploy.py  test_privacy_url_demo_path.py  test_publisher_agent_c.py  test_quality_report.py  test_runtime_backends.py  (+14 more)
hunter/: .env.example  .gitignore  README.md  pyproject.toml
(+220 files in other folders)
