[project]
name = "craftsman"
version = "0.1.0"
description = "Agent B: iOS SwiftUI workshop with gate, reflexion, and release automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "pillow>=10.4.0",
  "jsonschema>=4.23.0",
  "openai>=1.54.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
craftsman = "craftsman.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["craftsman*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
