[project]
name = "hunter"
version = "0.1.0"
description = "LangChain-based specialist agents with configurable models, prompts, and tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.14",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.60",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tavily-python>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
hunter = "hunter.main:main"
hunter-learn = "hunter.learning.weekly:main"
hunter-weekly = "hunter.learning.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hunter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
